2003-01-23  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/sh64elf.em: Include elf32-sh64.h.
	(sh64_elf_${EMULATION_NAME}_before_allocation): Adjust for changed
	sh64_elf_section_data.
	(sh64_elf_${EMULATION_NAME}_after_allocation): Likewise.

2003-01-23  Wu Yongwei  <adah@netstd.com>

	* ld.texinfo: Remove an extra "i" in --dll-search-prefix.
	* emultempl/pe.em (gld_${EMULATION_NAME}_list_options): Move a
	cross-80th-column-margin "an" to the next line.

2003-01-21  Nick Clifton  <nickc@redhat.com>

	* emulparams/tic3xcoff-onchip.sh: Rename to ...z
	* emulparams/tic3xcoff_onchip.sh: ...this.
	* Makefile.am (etic3xcoff_onchip.c): Fix name of generated C file.
	* Makefile.in: Regenerate.

2003-01-21  Fabio Alemagna  <falemagn@aros.org>

	* configure.tgt: Handle i[3456]86-*-aros*

2003-01-19  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* Makefile.am: Added etic3xcoff.o and etic4xcoff_onchip.o
	* Makefile.in: Regenerate
	* configure.tgt: Added extra target emulations
	* emulparams/tic3xcoff.sh: Remove old settings
	* emulparams/tic4xcoff.sh: Ditto
	* emulparams/tic3xcoff-onchip.sh: Added new
	* scripttempl/tic4xcoff.sc: Revise and combine both c3x and c4x
	* scripttempl/tic3xcoff.sc: Remove

2003-01-17  Andreas Jaeger  <aj@suse.de>

	* emultempl/elf32.em (gld${EMULATION_NAME}_add_sysroot): Do not
	skip ':'.

2003-01-16  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2002-01-14  Charles Wilson  <cwilson@ece.gatech.edu>

	* ld/ld.texinfo (node WIN32): Some clarifications
	and formatting fixups.

2003-01-09  Chris Demetriou  <cgd@broadcom.com>

	* ldmain.c (get_emulation): Sort -mipsNN checks in the usual
	order, and handle (ignore) -mips32r2.

2003-01-09  Daniel Jacobowitz  <drow@mvista.com>

	* ldmain.c (main): Make sure ld_sysroot is initialized.

2003-01-06  Daniel Jacobowitz  <drow@mvista.com>

	* Makefile.am (eelf32iq10.c): Fix tab/whitespace mixup.

	* Makefile.am (ldmain.o): Add @TARGET_SYSTEM_ROOT_DEFINE@.